# cashdata

./: .coverage  .gitignore  LICENSE  README.md  deploy-docker.sh  distribucion_ingreso.tsx  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  start-all.sh  start-backend.sh  status-report.sh
backend/: Dockerfile  alembic.ini  assign_statement_fk.py  cashdata.db  cleanup_duplicate_statements.py  docker-entrypoint.sh  fix_installment_periods.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c67ef27dd8f_rename_credit_card_id_to_payment_method_.py  11cb193cbf68_remove_period_from_budgets.py  2b7a98634eb3_create_cash_accounts_table.py  397ae91a41e4_add_start_date_to_monthly_statements.py  3b1f7a9b8c2b_add_monthly_statement_fk_to_purchases.py  3c20be868845_add_unique_constraints_to_budget_.py  3f64d359117e_remove_due_date_from_installments.py  65e73ce5eadb_merge_digital_wallets_and_budget_.py  7c83923e9ba7_create_payment_methods_table.py  86be928e503b_create_purchase_related_tables.py  933c620e2586_remove_period_from_budgets.py  93c1027e68d4_create_users_and_monthly_income_tables.py  94fb0bded428_create_bimonetary_db_structures.py  a6e6b9cbee13_add_soft_delete_to_users.py  aa1b2c3d4e5f_create_digital_wallets.py  bed868c47bdb_fix_users_deleted_at_nullable.py  bfaa992b8689_add_responsible_currency_to_expense_.py  c1d2e3f4g5h6_create_monthly_budgets.py  d2e3f4g5h6i7_create_budget_participants.py  d9658eae2481_add_cascade_delete_to_installments.py  (+6 more)
backend/scripts/: migrate_dual_currency_installments.py
(+476 files in other folders)
