[tool.poetry]
name = "cashdata"
version = "0.1.0"
description = "Sistema de gestión financiera personal"
authors = ["Javier Spina <javierspina@gmail.com>"]
readme = "README.md"
packages = [{include = "cashdata"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.13.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
pytest-cov = "^7.0.0"
email-validator = "^2.3.0"
py-dateutil = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
black = "^24.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"